--- a/config.toml
+++ b/config.toml
@@ -1,6 +1,6 @@
 baseURL = ""
 languageCode = "pl-pl"
-title = "<Dahm Code/>"
+title = "< Dahm />"
 theme = "ga3"
 paginate = 3
 DefaultContentLanguage = "pl-pl"
