--- a/config.toml
+++ b/config.toml
@@ -29,12 +29,12 @@ googleAnalytics = ""
 
   [[menu.main]]
     identifier = "tags"
-    name = "Tags"
+    name = "Tagi"
     url = "/tags/"
     weight = 2
 
   [[menu.main]]
-    name = "Archive"
+    name = "Archiwum"
     identifier = "archive"
     url = "/archive/"
     weight = 3
