--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -12,30 +12,21 @@ collections:
     editor:
       preview: true
     fields:
-      - { label: 'Title', name: 'title', widget: 'string' }
-      - { label: 'Publish Date', name: 'date', widget: 'datetime' }
-      - { label: 'Description', name: 'description', widget: 'string' }
-      - { label: 'Body', name: 'body', widget: 'markdown' }
+      - {label: 'Tytuł', name: 'title', widget: 'string' }
+      - {label: 'Data publikacji', name: 'date', widget: 'datetime' }
+      - {label: 'Opis SEO', name: 'description', widget: 'string' }
       - {label: 'Zdjęcie', name: 'image', widget: 'image', required: false}
+      - {label: 'Treść', name: 'body', widget: 'markdown' }
   - name: "pages"
-    label: "Strona"
+    label: "O autorze"
     files:
-      - file: "content/_index.md"
-        label: "Strona główna"
-        name: "Startowa"
+      - file: "content/about.md"
+        label: "O autorze"
+        name: "O autorze"
         fields:
-          - {label: Title, name: title, widget: string}
-          - {label: Subtitle, name: subtitle, widget: string}
-          - {label: Image, name: image, widget: image}
-          - {label: "Blurb", name: blurb, widget: object, fields: [
-              {label: "Heading", name: "heading", widget: string},
-              {label: "Text", name: "text", widget: "text"}]}
-          - {label: "Intro", name: intro, widget: object, fields: [
-              {label: "Heading", name: "heading", widget: string},
-              {label: "Text", name: "text", widget: "text"}]}
-          - {label: "Products", name: products, widget: list, fields: [
-              {label: "Image", name: "image", widget: "image"},
-              {label: "Text", name: "text", widget: "text"}]}
-          - {label: "Values", name: "values", widget: "object", fields: [
-              {label: "Heading", name: "heading", widget: string},
-              {label: "Text", name: "text", widget: "text"}]}
+          - {label: 'Tytuł' name: title, widget: string}
+          - {label: 'Opis SEO', name: 'description', widget: 'string' }
+          - {label: 'Zdjęcie', name: image, widget: image}
+          - {label: 'Treść', name: 'body', widget: 'markdown' }
+          - {label: 'Blurb', name: blurb, widget: object, fields: [
+         
