zmian admin config poprawka

--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -24,7 +24,7 @@ collections:
         label: "O autorze"
         name: "O autorze"
         fields:
-          - {label: 'Tytuł' name: title, widget: string}
+          - {label: 'Tytuł', name: title, widget: string}
           - {label: 'Opis SEO', name: 'description', widget: 'string' }
           - {label: 'Zdjęcie', name: image, widget: image}
           - {label: 'Treść', name: 'body', widget: 'markdown' }
