--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -18,7 +18,7 @@ collections:
       - {label: 'Zdjęcie', name: 'image', widget: 'image', required: false}
       - {label: 'Treść', name: 'body', widget: 'markdown' }
   - name: "pages"
-    label: "O autorze"
+    label: "Strony"
     files:
       - file: "content/about.md"
         label: "O autorze"
