zmiana admin config 7

--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -23,6 +23,8 @@ collections:
       - file: "content/about.md"
         label: "O autorze"
         name: "O autorze"
+        folder: 'content'
+        create: true
         fields:
           - {label: 'Tytuł', name: title, widget: string}
           - {label: 'Data publikacji', name: 'date', widget: 'datetime' }
