zmiana css layout

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,3 @@
 themes/ga3/README.md
 themes/ga3/LICENCE
-C:\Users\Beatka\Desktop\hugo\git-clone\hugo-cms-test-1\themes\ga3\.travis.yml
+themes/ga3/.travis.yml
