--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -15,6 +15,8 @@ collections:
       - {label: 'Tytuł', name: 'title', widget: 'string' }
       - {label: 'Data publikacji', name: 'date', widget: 'datetime' }
       - {label: 'Opis SEO', name: 'description', widget: 'string' }
+      - {label: 'Kategoria', name: 'categories', widget: 'string'}
+      - {label: 'Tagi', name: 'tags', widget: 'string'}
       - {label: 'Zdjęcie', name: 'image', widget: 'image', required: false}
       - {label: 'Treść', name: 'body', widget: 'markdown' }    
   - name: 'pages'
