--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -39,4 +39,14 @@ collections:
           - {label: 'Data publikacji', name: 'date', widget: 'datetime' }
           - {label: 'Opis SEO', name: 'description', widget: 'string' }
           - {label: 'Zdjęcie', name: image, widget: image}
-          - {label: 'Treść', name: 'body', widget: 'markdown' }              
+          - {label: 'Treść', name: 'body', widget: 'markdown' } 
+          - label: Dane kontaktowe
+            name: contact_entries
+            widget: list
+            fields:
+              - label: Heading
+                name: heading
+                widget: string
+              - label: Text
+                name: text
+                widget: text             
