--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -22,7 +22,7 @@ collections:
   - name: 'pages'
     label: 'Strony'
     files:
-      - file: 'content/about.md'
+      - file: 'content/about/_index.md'
         label: 'O autorze'
         name: 'O autorze'
         fields:
@@ -31,7 +31,7 @@ collections:
           - {label: 'Opis SEO', name: 'description', widget: 'string' }
           - {label: 'Zdjęcie', name: image, widget: image}
           - {label: 'Treść', name: 'body', widget: 'markdown' }  
-      - file: 'content/contact.md'
+      - file: 'content/contact/_index.md'
         label: 'Kontakt'
         name: 'Kontakt'
         fields:
