--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -49,4 +49,4 @@ collections:
                 widget: string
               - label: Text
                 name: text
-                widget: text             
+                widget: markdown             
