zmiana config.yml 21

--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -48,5 +48,5 @@ collections:
                 name: heading
                 widget: string
               - label: Text
-                name: text
+                name: body
                 widget: markdown             
