--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -49,4 +49,4 @@ collections:
                 widget: string
               - label: Treść
                 name: body
-                widget: text             
+                widget: markdown             
