--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -28,6 +28,17 @@ collections:
 
   - name: 'pages'
     label: 'Strony'
+    folder: 'content'
+    create: true
+    slug: '{{slug}}'
+    editor:
+      preview: true
+    fields:
+      - {label: 'Tytuł', name: 'title', widget: 'string' }
+      - {label: 'Data publikacji', name: 'date', widget: 'datetime' }
+      - {label: 'Opis SEO', name: 'description', widget: 'string' }
+      - {label: 'Zdjęcie', name: 'image', widget: 'image', required: false}
+      - {label: 'Treść', name: 'body', widget: 'markdown' }   
     files:
       - file: 'content/about/_index.md'
         label: 'O autorze'
