--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -55,4 +55,12 @@ collections:
                 widget: string
               - label: Treść
                 name: body
-                widget: markdown             
+                widget: markdown  
+                
+  - name: 'faq' # Used in routes, ie.: /admin/collections/:slug/edit
+    label: 'FAQ' # Used in the UI
+    folder: '_faqs'
+    create: true # Allow users to create new documents in this collection
+    fields: # The fields each document in this collection have
+      - { label: 'Question', name: 'title', widget: 'string', tagname: 'h1' }
+      - { label: 'Answer', name: 'body', widget: 'markdown' }     
