--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -58,7 +58,7 @@ collections:
                 widget: markdown  
                 
   - name: 'faq' # Used in routes, ie.: /admin/collections/:slug/edit
-    label: 'FAQ' # Used in the UI
+    label: 'Dodaj nowe FAQ' # Used in the UI
     folder: '_faqs'
     create: true # Allow users to create new documents in this collection
     fields: # The fields each document in this collection have
