--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -57,9 +57,9 @@ collections:
                 name: body
                 widget: markdown  
                 
-  - name: 'faq' # Used in routes, ie.: /admin/collections/:slug/edit
-    label: 'Dodaj nowe FAQ' # Used in the UI
-    folder: '_faqs'
+  - name: 'Nowa strona' # Used in routes, ie.: /admin/collections/:slug/edit
+    label: 'Dodaj nową stronę' # Used in the UI
+    folder: 'content'
     create: true # Allow users to create new documents in this collection
     fields: # The fields each document in this collection have
       - { label: 'Question', name: 'title', widget: 'string', tagname: 'h1' }
