--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -1,7 +1,7 @@
 backend:
   name: git-gateway
   branch: main # Branch to update (optional; defaults to master)
-  logo_url: https://tymowski.tk/img/martym.jpg
+  logo_url: 'https://tymowski.tk/img/martym.jpg'
   locale: 'pl'
 media_folder: static/img
 public_folder: /img
