zmiana congig-admin-8

--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -2,7 +2,8 @@ backend:
   name: git-gateway
   branch: main # Branch to update (optional; defaults to master)
   logo_url: https://tymowski.tk/img/martym.jpg
-  locale: 'de'
+  locale: 'pl'
+  site_url: https://tymowski.tk
 media_folder: static/img
 public_folder: /img
 collections:
