zmiana config-admi-13

--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -2,7 +2,7 @@ backend:
   name: git-gateway
   branch: main # Branch to update (optional; defaults to master)
 
-logo_url: blob:https://tymowski.tk/27c292a8-b150-47ac-b97e-9975753c2df5
+logo_url: https://tymowski.tk/img/image001.jpg
 locale: 'pl'
 site_url: https://tymowski.tk
 publish_mode: editorial_workflow  
