zmiana config-admin 21

--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -4,6 +4,7 @@ backend:
 
 locale: 'pl'
 site_url: https://tymowski.tk
+
 publish_mode: editorial_workflow  
 media_folder: static/img
 public_folder: /img
@@ -31,7 +32,8 @@ collections:
         widget: list
         fields: 
           - {label: 'Zdjęcie', name: 'image', widget: 'image', required: false}
-          - {label: 'Bio', name: 'body', widget: 'markdown' }  
+          - {label: 'Bio', name: 'body', widget: 'markdown' } 
+
   - name: 'pages'
     label: 'Strony'
     description: >
@@ -46,6 +48,7 @@ collections:
           - {label: 'Opis SEO', name: 'description', widget: 'string' }
           - {label: 'Zdjęcie', name: image, widget: image}
           - {label: 'Treść', name: 'body', widget: 'markdown' }  
+
       - file: 'content/contact/_index.md'
         label: 'Kontakt'
         name: 'Kontakt'
@@ -66,25 +69,23 @@ collections:
                 name: body
                 widget: markdown  
                 
+      files:
+      - file: 'content/_index.md'
+        label: 'Strona Home'
+        name: 'Strona Home'
+        fields:
+          - {label: 'Tytuł', name: title, widget: string}
+          - {label: 'Data publikacji', name: 'date', widget: 'datetime' }
+          - {label: 'Opis SEO', name: 'description', widget: 'string' }
+          - {label: 'Zdjęcie', name: image, widget: image}
+          - {label: 'Treść', name: 'body', widget: 'markdown' }            
+                
   - name: 'Nowa strona' # Used in routes, ie.: /admin/collections/:slug/edit
     label: 'Dodaj nową stronę' # Used in the UI
     description: >
       Dodawanie nowej strony nie będacej wpisem na blogu.
     folder: 'content/page'
     create: true # Allow users to create new documents in this collection
-    fields: # The fields each document in this collection have
-      - {label: 'Tytuł', name: title, widget: string}
-      - {label: 'Data publikacji', name: 'date', widget: 'datetime' }
-      - {label: 'Opis SEO', name: 'description', widget: 'string' }
-      - {label: 'Zdjęcie', name: image, widget: image, required: false}
-      - {label: 'Treść', name: 'body', widget: 'markdown' }    
-
-  - name: 'Strona Home' # Used in routes, ie.: /admin/collections/:slug/edit
-    label: 'Strona Home' # Used in the UI
-    description: >
-      Edycja strony głównej Home
-    folder: 'content/'
-    create: false # Allow users to create new documents in this collection
     fields: # The fields each document in this collection have
       - {label: 'Tytuł', name: title, widget: string}
       - {label: 'Data publikacji', name: 'date', widget: 'datetime' }
