zmiana config-admin 24

--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -34,7 +34,7 @@ collections:
           - {label: 'Zdjęcie', name: 'image', widget: 'image', required: false}
           - {label: 'Bio', name: 'body', widget: 'markdown' }  
 
-    - name: 'pages'
+  - name: 'Stron inna'
     label: 'Strony'
     description: >
       Edytowanie istniejących stron, kontakt oraz o autorze 
