--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -33,8 +33,8 @@ collections:
         fields: 
           - {label: 'Zdjęcie', name: 'image', widget: 'image', required: false}
           - {label: 'Bio', name: 'body', widget: 'markdown' }  
-
-  - name: 'Stron inna'
+          
+  - name: 'Inne strony'
     label: 'Strony'
     description: >
       Edytowanie istniejących stron, kontakt oraz o autorze 
