zmiana config-admin 25

--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -32,7 +32,7 @@ collections:
         fields: 
           - {label: 'Zdjęcie', name: 'image', widget: 'image', required: false}
           - {label: 'Bio', name: 'body', widget: 'markdown' }  
-  - name: 'pages'
+  - name: 'Inne strony'
     label: 'Strony'
     description: >
       Edytowanie istniejących stron, kontakt oraz o autorze 
