--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -33,7 +33,7 @@ collections:
           - {label: 'Zdjęcie', name: 'image', widget: 'image', required: false}
           - {label: 'Bio', name: 'body', widget: 'markdown' }  
   - name: 'Inne strony'
-    label: 'Strony'
+    label: 'Inne strony'
     description: >
       Edytowanie istniejących stron, kontakt oraz o autorze 
     files:
@@ -46,6 +46,15 @@ collections:
           - {label: 'Opis SEO', name: 'description', widget: 'string' }
           - {label: 'Zdjęcie', name: image, widget: image}
           - {label: 'Treść', name: 'body', widget: 'markdown' }  
+      - file: 'content/_index.md'
+        label: 'Strona główna'
+        name: 'Strona główna'
+        fields:
+          - {label: 'Tytuł', name: title, widget: string}
+          - {label: 'Data publikacji', name: 'date', widget: 'datetime' }
+          - {label: 'Opis SEO', name: 'description', widget: 'string' }
+          - {label: 'Zdjęcie', name: image, widget: image}
+          - {label: 'Treść', name: 'body', widget: 'markdown' }      
       - file: 'content/contact/_index.md'
         label: 'Kontakt'
         name: 'Kontakt'
