zmiana config.toml

--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -3,7 +3,7 @@ backend:
 
 site_url: https://tymowski.tk
 
-local: 'pl'
+locale: 'pl'
 
 publish_mode: editorial_workflow
 media_folder: assets/uploads
