--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -25,8 +25,8 @@ collections:
       - {label: 'Tytuł', name: 'title', widget: 'string' }
       - {label: 'Data publikacji', name: 'date', widget: 'datetime' }
       - {label: 'Opis SEO', name: 'description', widget: 'string' }
-      - {label: 'Kategoria', name: 'categories', widget: 'string'}
-      - {label: 'Tagi', name: 'tags', widget: 'string'}
+      - {label: 'Kategoria', name: 'categories', widget: 'string', required: false}
+      - {label: 'Tagi', name: 'tags', widget: 'string', required: false}
       - {label: 'Zdjęcie', name: 'image', widget: 'image', required: false}
       - {label: 'Treść', name: 'body', widget: 'markdown' } 
       - label: Dane autora
