--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -24,7 +24,7 @@ collections:
     fields:
       - {label: 'Tytuł', name: 'title', widget: 'string' }
       - {label: 'Data publikacji', name: 'date', widget: 'datetime' }
-      - {label: 'Opis SEO', name: 'description', widget: 'string' }
+      - {label: 'Opis SEO', name: 'description', widget: 'string', required: false }
       - {label: 'Kategoria', name: 'categories', widget: 'string', required: false}
       - {label: 'Tagi', name: 'tags', widget: 'string', required: false}
       - {label: 'Zdjęcie', name: 'image', widget: 'image', required: false}
