--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -26,7 +26,7 @@ collections:
       - {label: 'Data publikacji', name: 'date', widget: 'datetime' }
       - {label: 'Opis SEO', name: 'description', widget: 'string', required: false }
       - {label: 'Kategoria', name: 'categories', widget: 'string', required: false}
-      - {label: 'Tagi', name: 'tags', widget: 'string', required: false}
+      - {label: 'Tagi', name: 'tags', widget: 'list', required: false}
       - {label: 'Zdjęcie', name: 'image', widget: 'image', required: false}
       - {label: 'Treść', name: 'body', widget: 'markdown' } 
       - label: Dane autora
