--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -24,11 +24,11 @@ collections:
     fields:
       - {label: 'Tytuł', name: 'title', widget: 'string' }
       - {label: 'Data publikacji', name: 'date', widget: 'datetime' }
-      - {label: 'Opis SEO', name: 'description', widget: 'string', hint: 'Dodaj opis SEO' required: false }
-      - {label: 'Kategoria', name: 'categories', widget: 'string',hint: 'Dodaj kategorię' required: false}
+      - {label: 'Opis SEO', name: 'description', widget: 'string', hint: 'Dodaj opis SEO', required: false }
+      - {label: 'Kategoria', name: 'categories', widget: 'string',hint: 'Dodaj kategorię', required: false}
       #- {label: 'Tagi', name: 'tags', widget: 'list', required: false}
-      - {label: 'Tagi', name: 'tags', widget: 'list', required: false, hint: 'Wpis tagi', default: 'Opowiadania', field: "",
-            fields: ""}        
+      - {label: 'Tagi', name: 'tags', widget: 'list', required: false, hint: 'Wpis tagi', default: 'Opowiadania', field: '',
+            fields: ''}        
       - {label: 'Zdjęcie', name: 'image', widget: 'image', required: false}
       - {label: 'Treść', name: 'body', widget: 'markdown' } 
       - label: Dane autora
